# Task-Bridge

./: .prettierignore  .prettierrc.json  BUGS & NOTES.md  BUGS.md  CHANGELOG  CHANGELOG.md  LICENSE  README.md  TODO-CORE.md  TODO-UI.md  TODO.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  splashscreen.html  todo.md  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-website.yml  release.yaml  release_v2.yaml  test_build.yaml
doc/: v0.1-specification.md  v0.2-specification.md  v0.3-specification.md  v0.4-specification.md  v0.5-specification.md  v0.6-specification.md  v0.7-specification.md  v1.0-specification.md  workflow.md
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  error.rs  experimental.rs  github_api.rs  lib.rs  logging.rs  main.rs  new_github_api.rs  project.rs  setup.rs  structs.rs  utils.rs
src-tauri/src/error/: internals.rs  mod.rs
src-tauri/src/project/: mod.rs  task.rs
src/bindings/: index.ts
src/hooks/: useAppPreferences.ts  useAppVersion.ts  useEventListeners.ts  useIsOnline.ts  useListenForAuthSetupCompleteEvent.ts  useListenForSyncUpdateMessage.ts  useProjectSettings.ts  useSetup.ts  useUpdateProjectSyncSettings.ts
src/lib/: constants.ts  interfaces.ts  logging.ts  sample-data.ts  types.ts  utils.ts
src/providers/: ConnectionStatusProvider.tsx  (+2 more)
website/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+120 files in other folders)
