[package]
name = "task-bridge"
version = "1.0.0"
description = "Project management app"
authors = ["RussellGN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "task_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = {version = "2", features = ["blocking", "json"] }
octocrab = { version = "0.44.0", features = ["stream"] }
http-body-util = "0.1.3"
chrono = "0.4.40"
futures-util = "0.3.31"
colored = "3.0.0"
uuid = { version = "1.16.0", features = ["v4"] }
urlencoding = "2.1.3"
tokio = { version = "1.47.1", features = ["full"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.0", features = ["deep-link"] }
